
6.13  2015-07-08
  - Improved error messages for broken applications in Mojo::Server. (mst)
  - Improved subscribers method in Mojo::EventEmitter to allow subscribers to be
    modified more easily.

6.12  2015-06-18
  - Welcome to the Mojolicious core team Dan Book.
  - Added TO_JSON method to Mojo::Collection. (wttw)
  - Added find_packages function to Mojo::Loader.
  - Fixed bug in Mojo::Message where multipart content would get downgraded
    unnecessarily.

6.11  2015-05-16
  - Deprecated Mojo::Content::build_body and Mojo::Content::build_headers.
  - Added headers_contain method to Mojo::Content.
  - Updated jQuery to version 2.1.4.
  - Fixed indentation of ASCII art in documentation browser. (jberger)
  - Fixed bug where inline was not considered a reserved stash value.

6.10  2015-04-26
  - Removed support for user/group switching, because it never worked
    correctly, which means that this security feature has become an attack
    vector itself. If you depend on this functionality, you can now use the
    CPAN module Mojolicious::Plugin::SetUserGroup instead.
  - Removed group and user attributes from Mojo::Server.
  - Removed setuidgid method from Mojo::Server.
  - Removed group and user settings from Hypnotoad.
  - Removed -g/--group and -u/--user options from daemon and prefork commands.
  - Added next_tick method to Mojo::Reactor::Poll.
  - Improved next_tick callbacks to run in the same order in which they were
    registered.

6.09  2015-04-25
  - Improved HTML Living Standard compliance of Mojo::Parameters. (riche, sri)
  - Fixed bug in Mojolicious::Types where the json MIME type did not specify a
    charset. (kaktus)

6.08  2015-04-09
  - Added is_established and server_open methods to
    Mojo::Transaction::WebSocket.
  - Improved finish and send methods in Mojolicious::Controller to
    automatically establish the WebSocket connection if necessary.
  - Improved pod_to_html helper in Mojolicious::Plugin::PODRenderer to unindent