@@ -1,5 +1,7 @@
 
 6.13  2015-07-08
+  - Added support for validating file uploads.
+  - Added upload check to Mojolicious::Validator.
   - Improved error messages for broken applications in Mojo::Server. (mst)
   - Improved subscribers method in Mojo::EventEmitter to allow subscribers to be
     modified more easily.
